fix(ui5-view-settings-dialog): adjust scrollbar behavior  (#4795)
Problem description:
The ui5-dialog's content could have a redundant
horizontal scrollbar on Safari and Firefox when
there is a vertical scrollbar placed as an overlay.
Solution:
A right margin is applied to the ui5-view-settings-dialog
content and ui5-date-picker content.

Fixes: #4724
Fixes: #4725
Fixes: #4860

--- a/packages/fiori/src/themes/ViewSettingsDialog.css
+++ b/packages/fiori/src/themes/ViewSettingsDialog.css
@@ -13,7 +13,7 @@
 }
 
 .ui5-vsd-content {
-	margin: 0 -1rem;
+	margin: 0 0.1px 0 -1rem;
 }
 
 .ui5-vsd-title {
